// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`BpkCheckbox composable API should render composable API snapshot 1`] = `
<div>
  <label
    class="bpk-checkbox"
    data-part="root"
    data-scope="checkbox"
    data-state="checked"
    dir="ltr"
    for="checkbox::ru::input"
    id="checkbox::ru:"
  >
    <div
      aria-hidden="true"
      class="bpk-checkbox__control"
      data-part="control"
      data-scope="checkbox"
      data-state="checked"
      dir="ltr"
      id="checkbox::ru::control"
    >
      <div
        class="bpk-checkbox__indicator"
        data-part="indicator"
        data-scope="checkbox"
        data-state="checked"
        dir="ltr"
      />
    </div>
    <span
      class="bpk-checkbox__label"
      data-part="label"
      data-scope="checkbox"
      data-state="checked"
      dir="ltr"
      id="checkbox::ru::label"
    >
      Composable example
    </span>
    <input
      aria-invalid="false"
      aria-labelledby="checkbox::ru::label"
      checked=""
      class="bpk-checkbox__input"
      id="checkbox::ru::input"
      name="test"
      style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap; word-wrap: normal;"
      type="checkbox"
      value="on"
    />
  </label>
</div>
`;

exports[`BpkCheckbox snapshots should render checked checkbox correctly 1`] = `
<div>
  <label
    class="bpk-checkbox"
    data-part="root"
    data-scope="checkbox"
    data-state="checked"
    dir="ltr"
    for="checkbox::rg::input"
    id="checkbox::rg:"
  >
    <div
      aria-hidden="true"
      class="bpk-checkbox__control"
      data-part="control"
      data-scope="checkbox"
      data-state="checked"
      dir="ltr"
      id="checkbox::rg::control"
    >
      <div
        class="bpk-checkbox__indicator"
        data-part="indicator"
        data-scope="checkbox"
        data-state="checked"
        dir="ltr"
      />
    </div>
    <span
      class="bpk-checkbox__label bpk-checkbox__label"
      data-part="label"
      data-scope="checkbox"
      data-state="checked"
      dir="ltr"
      id="checkbox::rg::label"
    >
      Test
    </span>
    <input
      aria-invalid="false"
      aria-labelledby="checkbox::rg::label"
      checked=""
      class="bpk-checkbox__input"
      id="checkbox::rg::input"
      name="test"
      style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap; word-wrap: normal;"
      type="checkbox"
      value="on"
    />
  </label>
</div>
`;

exports[`BpkCheckbox snapshots should render default checkbox correctly 1`] = `
<div>
  <label
    class="bpk-checkbox"
    data-part="root"
    data-scope="checkbox"
    data-state="unchecked"
    dir="ltr"
    for="checkbox::rf::input"
    id="checkbox::rf:"
  >
    <div
      aria-hidden="true"
      class="bpk-checkbox__control"
      data-part="control"
      data-scope="checkbox"
      data-state="unchecked"
      dir="ltr"
      id="checkbox::rf::control"
    >
      <div
        class="bpk-checkbox__indicator"
        data-part="indicator"
        data-scope="checkbox"
        data-state="unchecked"
        dir="ltr"
        hidden=""
      />
    </div>
    <span
      class="bpk-checkbox__label bpk-checkbox__label"
      data-part="label"
      data-scope="checkbox"
      data-state="unchecked"
      dir="ltr"
      id="checkbox::rf::label"
    >
      Test
    </span>
    <input
      aria-invalid="false"
      aria-labelledby="checkbox::rf::label"
      class="bpk-checkbox__input"
      id="checkbox::rf::input"
      name="test"
      style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap; word-wrap: normal;"
      type="checkbox"
      value="on"
    />
  </label>
</div>
`;

exports[`BpkCheckbox snapshots should render disabled checkbox correctly 1`] = `
<div>
  <label
    class="bpk-checkbox bpk-checkbox--disabled"
    data-disabled=""
    data-part="root"
    data-scope="checkbox"
    data-state="unchecked"
    dir="ltr"
    for="checkbox::rh::input"
    id="checkbox::rh:"
  >
    <div
      aria-hidden="true"
      class="bpk-checkbox__control"
      data-disabled=""
      data-part="control"
      data-scope="checkbox"
      data-state="unchecked"
      dir="ltr"
      id="checkbox::rh::control"
    >
      <div
        class="bpk-checkbox__indicator"
        data-disabled=""
        data-part="indicator"
        data-scope="checkbox"
        data-state="unchecked"
        dir="ltr"
        hidden=""
      />
    </div>
    <span
      class="bpk-checkbox__label bpk-checkbox__label"
      data-disabled=""
      data-part="label"
      data-scope="checkbox"
      data-state="unchecked"
      dir="ltr"
      id="checkbox::rh::label"
    >
      Test
    </span>
    <input
      aria-invalid="false"
      aria-labelledby="checkbox::rh::label"
      class="bpk-checkbox__input"
      disabled=""
      id="checkbox::rh::input"
      name="test"
      style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap; word-wrap: normal;"
      type="checkbox"
      value="on"
    />
  </label>
</div>
`;

exports[`BpkCheckbox snapshots should render indeterminate checkbox correctly 1`] = `
<div>
  <label
    class="bpk-checkbox"
    data-part="root"
    data-scope="checkbox"
    data-state="unchecked"
    dir="ltr"
    for="checkbox::rm::input"
    id="checkbox::rm:"
  >
    <div
      aria-hidden="true"
      class="bpk-checkbox__control"
      data-part="control"
      data-scope="checkbox"
      data-state="unchecked"
      dir="ltr"
      id="checkbox::rm::control"
    >
      <div
        class="bpk-checkbox__indicator"
        data-part="indicator"
        data-scope="checkbox"
        data-state="unchecked"
        dir="ltr"
        hidden=""
      />
    </div>
    <span
      class="bpk-checkbox__label bpk-checkbox__label"
      data-part="label"
      data-scope="checkbox"
      data-state="unchecked"
      dir="ltr"
      id="checkbox::rm::label"
    >
      Test
    </span>
    <input
      aria-invalid="false"
      aria-labelledby="checkbox::rm::label"
      class="bpk-checkbox__input"
      id="checkbox::rm::input"
      name="test"
      style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap; word-wrap: normal;"
      type="checkbox"
      value="on"
    />
  </label>
</div>
`;

exports[`BpkCheckbox snapshots should render invalid checkbox correctly 1`] = `
<div>
  <label
    class="bpk-checkbox bpk-checkbox--invalid"
    data-part="root"
    data-scope="checkbox"
    data-state="unchecked"
    dir="ltr"
    for="checkbox::ri::input"
    id="checkbox::ri:"
  >
    <div
      aria-hidden="true"
      class="bpk-checkbox__control"
      data-part="control"
      data-scope="checkbox"
      data-state="unchecked"
      dir="ltr"
      id="checkbox::ri::control"
    >
      <div
        class="bpk-checkbox__indicator"
        data-part="indicator"
        data-scope="checkbox"
        data-state="unchecked"
        dir="ltr"
        hidden=""
      />
    </div>
    <span
      class="bpk-checkbox__label bpk-checkbox__label"
      data-part="label"
      data-scope="checkbox"
      data-state="unchecked"
      dir="ltr"
      id="checkbox::ri::label"
    >
      Test
    </span>
    <input
      aria-invalid="false"
      aria-labelledby="checkbox::ri::label"
      class="bpk-checkbox__input"
      id="checkbox::ri::input"
      name="test"
      style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap; word-wrap: normal;"
      type="checkbox"
      value="on"
    />
  </label>
</div>
`;

exports[`BpkCheckbox snapshots should render required checkbox correctly 1`] = `
<div>
  <label
    class="bpk-checkbox"
    data-part="root"
    data-scope="checkbox"
    data-state="unchecked"
    dir="ltr"
    for="checkbox::rk::input"
    id="checkbox::rk:"
  >
    <div
      aria-hidden="true"
      class="bpk-checkbox__control"
      data-part="control"
      data-scope="checkbox"
      data-state="unchecked"
      dir="ltr"
      id="checkbox::rk::control"
    >
      <div
        class="bpk-checkbox__indicator"
        data-part="indicator"
        data-scope="checkbox"
        data-state="unchecked"
        dir="ltr"
        hidden=""
      />
    </div>
    <span
      class="bpk-checkbox__label bpk-checkbox__label"
      data-part="label"
      data-scope="checkbox"
      data-state="unchecked"
      dir="ltr"
      id="checkbox::rk::label"
    >
      Test
      <span
        class="bpk-checkbox__asterisk"
      >
        *
      </span>
    </span>
    <input
      aria-invalid="false"
      aria-labelledby="checkbox::rk::label"
      class="bpk-checkbox__input"
      id="checkbox::rk::input"
      name="test"
      style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap; word-wrap: normal;"
      type="checkbox"
      value="on"
    />
  </label>
</div>
`;

exports[`BpkCheckbox snapshots should render small label checkbox correctly 1`] = `
<div>
  <label
    class="bpk-checkbox"
    data-part="root"
    data-scope="checkbox"
    data-state="unchecked"
    dir="ltr"
    for="checkbox::rl::input"
    id="checkbox::rl:"
  >
    <div
      aria-hidden="true"
      class="bpk-checkbox__control"
      data-part="control"
      data-scope="checkbox"
      data-state="unchecked"
      dir="ltr"
      id="checkbox::rl::control"
    >
      <div
        class="bpk-checkbox__indicator"
        data-part="indicator"
        data-scope="checkbox"
        data-state="unchecked"
        dir="ltr"
        hidden=""
      />
    </div>
    <span
      class="bpk-checkbox__label bpk-checkbox__label bpk-checkbox__label--small"
      data-part="label"
      data-scope="checkbox"
      data-state="unchecked"
      dir="ltr"
      id="checkbox::rl::label"
    >
      Test
    </span>
    <input
      aria-invalid="false"
      aria-labelledby="checkbox::rl::label"
      class="bpk-checkbox__input"
      id="checkbox::rl::input"
      name="test"
      style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap; word-wrap: normal;"
      type="checkbox"
      value="on"
    />
  </label>
</div>
`;

exports[`BpkCheckbox snapshots should render white checkbox correctly 1`] = `
<div>
  <label
    class="bpk-checkbox bpk-checkbox--white"
    data-part="root"
    data-scope="checkbox"
    data-state="unchecked"
    dir="ltr"
    for="checkbox::rj::input"
    id="checkbox::rj:"
  >
    <div
      aria-hidden="true"
      class="bpk-checkbox__control"
      data-part="control"
      data-scope="checkbox"
      data-state="unchecked"
      dir="ltr"
      id="checkbox::rj::control"
    >
      <div
        class="bpk-checkbox__indicator"
        data-part="indicator"
        data-scope="checkbox"
        data-state="unchecked"
        dir="ltr"
        hidden=""
      />
    </div>
    <span
      class="bpk-checkbox__label bpk-checkbox__label"
      data-part="label"
      data-scope="checkbox"
      data-state="unchecked"
      dir="ltr"
      id="checkbox::rj::label"
    >
      Test
    </span>
    <input
      aria-invalid="false"
      aria-labelledby="checkbox::rj::label"
      class="bpk-checkbox__input"
      id="checkbox::rj::input"
      name="test"
      style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap; word-wrap: normal;"
      type="checkbox"
      value="on"
    />
  </label>
</div>
`;
